<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/select"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/select" />

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/select"
        app:layout_constraintStart_toEndOf="@+id/order"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <TextView
        android:id="@+id/check_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/check_order"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/order"
        app:layout_constraintTop_toBottomOf="@+id/select" />
    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/check_order"
        app:layout_constraintTop_toBottomOf="@+id/check_order" />

</androidx.constraintlayout.widget.ConstraintLayout>